<resources>
    <string name="app_name">MyGym</string>
    <string name="title_home">Home</string>
    <string name="profile_key">ProfileKey</string>
    <string name="settings">Impostazioni</string>

    <string name="label_menu_calendario_corsi">Calendario Corsi</string>
    <string name="label_admin_menu_lista_utenti">Lista Utenti</string>
    <string name="label_admin_menu_lista_giorni">Lista Giorni</string>
    <string name="label_admin_menu_lista_esercizi">Lista Esercizi</string>
    <string name="label_admin_menu_nuova_giornata">Genera Nuova Giornata</string>

    <string name="label_admin_menu_signup">Signup</string>

    <string name="label_user_menu_schede_utente">Schede Utente</string>
    <string name="label_user_menu_entry_card">Entry Card</string>
    <string name="argomento_lista_utente_to_esercizi">argomentListaEsercizi</string>


    <string name="collectionUtenti">Utenti</string>
    <string name="collectionEsercizi">Esercizi</string>
    <string name="collectionEserciziPerUtente">EserciziPerUtente</string>
    <string name="collectionEserciziPerGiorno">EserciziPerGiorno</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_access_required">Accesso alla fotocamera necessario per scannerizzare i QrCode</string>
    <string name="ok">Conferma</string>
    <string name="rimuovere_giornata">Rimuovere Giornata?</string>
    <string name="label_user_menu_lista_giorni_utente">Lista Giorni Utente</string>
    <string name="valuta_giornata">Valuta giornata</string>
    <string name="collectionValutazioniGiornate">ValutazioniGiornate</string>
    <string name="rimuovi_giornata">Rimuovere Giornata?</string>
    <string name="label_user_menu_lista_esercizi_utente">Lista Esercizi Utente</string>
    <string name="Disconnetti">USCIRE?</string>
    <string name="Anagrafica">Anagrafica</string>
</resources>