<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragment_home_admin">

    <fragment
        android:id="@+id/fragment_lista_utenti"
        android:name="com.example.mygym.ui.schedaEsercizi.ListaUtentiFragment"
        android:label="@string/label_admin_menu_lista_utenti"
        tools:layout="@layout/fragment_lista_utenti" >
        <action
            android:id="@+id/action_fragment_lista_utenti_to_fragment_lista_esercizi"
            app:destination="@id/fragment_lista_esercizi"
            app:popUpTo="@id/fragment_lista_utenti"
            app:popUpToInclusive="true">
            <argument
                android:name="Argomento"
                app:argType="string"/>
            </action>
    </fragment>

    <fragment
        android:id="@+id/fragment_calendario"
        android:name="com.example.mygym.ui.calendario.CalendarioFragment"
        android:label="@string/label_menu_calendario_corsi"
        tools:layout="@layout/fragment_calendario" />

    <fragment
        android:id="@+id/fragment_home_admin"
        android:name="com.example.mygym.ui.home.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin">
        <action
            android:id="@+id/action_navigation_home_admin_to_signupFragment"
            app:destination="@id/fragment_signup"
            app:popUpTo="@id/fragment_home_admin"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/fragment_lista_esercizi"
        android:name="com.example.mygym.ListaEserciziFragment"
        android:label="@string/label_admin_menu_lista_esercizi"
        tools:layout="@layout/fragment_lista_esercizi">
        <argument
            android:name="Argomento"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/fragment_signup"
        android:name="com.example.mygym.ui.signup.SignupFragment"
        android:label="@string/label_admin_menu_signup"
        tools:layout="@layout/fragment_signup"/>


</navigation>